# emojibot

./: .env  .gitignore  Cargo.toml  database.sql  run.bat  schema.db
src/: context.rs  daily_emoji.rs  discord_events.rs  emoji.rs  emoji_list.rs  emojis.rs  emojis_with_counts.rs  find_emoji.rs  images.rs  inventory.rs  main.rs  periodic_emoji.rs  queries.rs  special_characters.rs  util.rs
src/images/: generate.rs  inventory.rs  mod.rs  queries.rs  rasterize.rs
src/inventory/: group.rs  mod.rs  queries.rs  view.rs
src/trading/: command.rs  mod.rs  queries.rs  recycling.rs  trade.rs  trade_offer.rs  trading_roles.rs
src/user_settings/: private.rs
